# figma-to-html

./: .gitignore  PROJECT_PLAN.md  README.md
agent-team/: code-quality.md
backend/: .env.example  config.py  db.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base.py  code_generator.py  componentizer.py  fixer.py  layout_strategy.py  micro_fixer.py  position_generator.py  verification.py
backend/pipeline/: __init__.py  job_manager.py  orchestrator.py
backend/prompts/: code_generation.txt  fixer.txt  fixer_assets.txt  fixer_spacing.txt  fixer_typography.txt  layout_strategy.txt  micro_fixer.txt
backend/routers/: jobs.py  ws.py
backend/schemas/: __init__.py  design_spec.py  diff_report.py  job.py  layout_plan.py
backend/services/: browser_service.py  diff_service.py  figma_api.py  openai_service.py
backend/templates/: base.html  css_reset.css
backend/tests/: test_asset_filenames.py  test_code_generator.py  test_fixer.py  test_layout_strategy.py  test_parser.py  test_pipeline_integration.py  test_verification.py
docs/specs/: architecture.md
figma-plugin/: esbuild.config.js  manifest.json  package-lock.json  package.json  tsconfig.json
figma-plugin/src/: main.ts  ui.html  ui.ts
shared/: design-spec-schema.json
web-app/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/components/: AIFixModal.tsx  CodePanel.tsx  DeviceSwitcher.tsx  DragOverlay.tsx  ElementEditor.tsx  ErrorBoundary.tsx  LinkEditor.tsx  PreviewFrame.tsx  SpacingPanel.tsx  (+2 more)
(+22 files in other folders)
